# learning-llvm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  xmake.lua
src/: CMakeLists.txt
src/CompileTimeFunctionCallCounter/: CompileTimeFunctionCallCounter.cpp  README.md  Test.ll
src/ConstantAdditionCombiner/: CMakeLists.txt  ConstantAdditionCombiner.cpp  README.md  Test.ll
src/IRGenerator/: SemanticAnalyzer.h  main.cpp
src/LLVMArithmetic/: Arithmetic.cpp  CMakeLists.txt
src/LLVMBlock/: Block.cpp  CMakeLists.txt
src/LLVMForLoop/: ForLoop.cpp
src/LLVMFunction/: CMakeLists.txt  Function.cpp
src/LLVMFunctionArgs/: CMakeLists.txt  FunctionArgs.cpp
src/LLVMGlobalVar/: CMakeLists.txt  GlobalVar.cpp
src/LLVMHello/include/: Version.h
src/LLVMHello/lib/Basic/: Version.cpp
src/LLVMHello/tools/driver/: driver.cpp
src/LLVMIfelse/: CMakeLists.txt  Ifelse.cpp
src/LLVMIfelsephi/: CMakeLists.txt  Ifelsephi.cpp  LLVMIfelsephi.cpp
src/LLVMModule/: CMakeLists.txt  Module.cpp
src/LLVMReturn/: CMakeLists.txt  Return.cpp
src/Minicompiler/: CalculatorCompilerRuntime.cpp  IRGenerator.cpp  IRGenerator.h  Parser.h  SemanticAnalyzer.cpp  main.cpp
src/MyPass/: MyPass.cpp  README.md  test.ll
src/RunTimeFunctionCallCounter/: CMakeLists.txt  README.md  RunTimeFunctionCallCounter.cpp  Test.ll
src/SimpleAnalyz/: AST.h  Lexer.cpp  SemanticAnalyzer.cpp  main.cpp
src/SimpleFunctionPass/: README.md  SimpleFunctionPass.cpp  Test.ll  input.ll
src/SimpleLexer/src/: Lexer.cpp  LexerPlayer.cpp
src/SimpleLoopPass/: README.md  SimpleLoopPass.cpp  SimpleLoopTest.ll
src/SimpleModulePass/: README.md  SimpleModulePass.cpp  Test.ll
src/SimpleParser/: Lexer.h  Parser.cpp  ParserPlayer.cpp
